--- a/spring-boot-webservice/src/main/resources/application.properties
+++ b/spring-boot-webservice/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Database setting
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@pipoddevdb.koreanair.com:2003:PIPODS
+spring.datasource.username=DA_ODSU
+spring.datasource.password=kal2013pip
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=error
 
